<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_DataSourceCtrl" Id="4717d13e-d3bc-4ab4-94ca-1fcab7b04e2b">
    <Declaration><![CDATA[TYPE ST_HMI_DataSourceCtrl : 
STRUCT
	nActiveConfigurationIdx: INT;
	
	aInputSourceCtrls: ARRAY [0..0] OF ST_HMI_InputSourceCtrl;
	
	bStart: BOOL;
	bCancel: BOOL;
	bPause: BOOL;
	bReset: BOOL;
	
	bUpdateRecordList: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>